# ZanLing-TrueZero

./: .gitignore  Cargo.toml  README.md  a.py  ai1NAB.pyx  ai1NAB2.pyx  ai5.pyx  ai5bvb.py  aidata.py  aidatacombiner.py  aieval6.pyx  aieval7.pyx  aieval7g.pyx  aieval7m.pyx  aieval7sc.pyx  aieval7scd.pyx  aieval7scm.pyx  aieval8.py  aieval8.pyx  aieval8t.pyx  aigamesdb.pyx  aigamesrand.pyx  aimatchup.py  aimatchup.pyx  aitraitgen.py  aiucieval.py  botvsbot.py  client.py  decoder.py  dockerfile  exec_plotter.py  experiment.py  experiments.json  gui.py  list.txt  logs2gpu2.txt  main.py  mcts.py  mcts_trainer.py  nano.pt  (+25 more)
.github/workflows/: generator-generic-ossf-slsa3-publish.yml
archives/: README.md  ai1.py  ai1NAB.pyx  ai1NAB2.pyx  ai2.py  ai3.py  ai4.py  ai5elm.pyx  ai5elmmcts.pyx  ai5mcts.pyx  ai5r.pyx  aiNAB3.pyx  ai_games_lichess.pyx  aidata.py  aidatacombiner.py  aieval.py  aieval2.py  aieval3.py  aieval4.py  aieval5.py  aieval5lite.py  aieval5pd.py  aieval5rec.py  aieval5residual.py  aieval5xgb.pyx  aieval6.pyx  aieval6elm.pyx  aieval6elm2.pyx  aieval6md.pyx  aieval7.pyx  aieval7m.pyx  aieval7mm.pyx  aieval7sc.pyx  aieval7scd.pyx  aieval7scm.pyx  aieval8t.pyx  aigameregressor.py  aigameregressor2.py  aigamesdb.pyx  aigamesmatchup.pyx  (+16 more)
lib/: games.py  growable_array.py  logger.py  loop.py  networks.py  plotter.py  queue.py  residual.py  save_onnx.py  schedule.py  selfplay_client.py  supervised.py  train.py  util.py
lib/data/: check.py  file.py  group.py  position.py  sampler.py  taker.py
lib/mapping/: ataxx_index_to_move_input.txt  ataxx_symmetry.json  ataxx_valid.txt  chess_flat_to_att.txt  chess_flat_to_conv.txt  chess_flat_to_move_input.txt  mapping.py
lib/model/: attention.py  constant.py  layers.py  post_act.py  simple.py
src/: boardmanager.rs  cache.rs  dataformat.rs  decoder.rs  dirichlet.rs  dummyreq.rs  elo.rs  executor.rs  executor.sync-conflict-20240928-163634-IFY56V3.rs  fileformat.rs  lib.rs  list.rs  main.rs  mcts.rs  mcts.sync-conflict-20240928-163634-IFY56V3.rs  mcts_trainer.rs  message_types.rs  mvs.rs  selfplay.rs  selfplay.sync-conflict-20240928-163634-IFY56V3.rs  settings.rs  superluminal.rs  testnet.rs  uci.rs  uci.sync-conflict-20240928-163635-IFY56V3.rs  utils.rs
