[package]
name = "tz-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.72"
cozy-chess = "0.3.4"
lazy_static = "1.4.0"
tch = "0.14.0" # DO NOT CHANGE TCH VERSION
rand = "0.8.5"
rand_distr = "0.4.3"
serde = {version = "1.0.188", features = ["derive"]}
bytemuck = "1.14.0"
internal-iterator = "0.2.1"
serde_json = "1.0.107"
flume = "0.11.0"
crossbeam = "0.8.2"
futures = {version="0.3.29", features=["thread-pool"]}
itertools = "0.12.0"
tokio = { version = "1", features = ["full"] }
superluminal-perf = "0.3.0"
pyo3 = { version = "0.21.1", features = ["extension-module"] }
