[package]
name = "tz-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tz_rust"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.21.2"
features = ["extension-module"]

[tool.maturin]
python-source = "python"

[profile.release]
debug = true


[dependencies]
anyhow = "1.0.72"
cozy-chess = "0.3.4"
lazy_static = "1.4.0"
tch = "0.14.0" # DO NOT CHANGE TCH VERSION
rand = "0.8.5"
rand_distr = "0.4.3"
serde = {version = "1.0.188", features = ["derive"]}
bytemuck = "1.14.0"
internal-iterator = "0.2.1"
serde_json = "1.0.107"
flume = "0.11.0"
crossbeam = "0.8.2"
futures = { version = "0.3.29", default-features = false, features = ["executor", "thread-pool"] }
itertools = "0.13.0"
tokio = { version = "1", features = ["full"] }
superluminal-perf = "0.3.0"
crossfire = "1.0.1"
plotters = "0.3.6"
async-std = {version="1.12.0", features=["unstable"]}
lru = "0.12.3"
